formats/V4.1.0/lehd_shapefiles.asciidoc
= LEHD Public Use Shapefile Data
Heath Hayward, Matthew Graham, Lars Vilhuber <lars.vilhuber@cornell.edu>
07 March 2017
// a2x: --dblatex-opts "-P latex.output.revhistory=0 --param toc.section.depth=3"
:ext-relative: {outfilesuffix}
( link:lehd_shapefiles.pdf[Printable version] )



[IMPORTANT]
.Important
==============================================
This document is not an official Census Bureau publication. It is compiled from publicly accessible information
by Lars Vilhuber (http://www.ilr.cornell.edu/ldi/[Labor Dynamics Institute, Cornell University]).
Feedback is welcome. 
Please write us at
link:mailto:lars.vilhuber@cornell.edu?subject=LEHD_Shapefiles[lars.vilhuber@cornell.edu].
==============================================



Scope
-----

The public-use data from the Longitudinal Employer-Household Dynamics
Program, including the Quarterly Workforce Indicators (QWI) and
Job-to-Job Flows (J2J), are available for download according to
link:lehd_public_use_schema{ext-relative}[structural] and
link:lehd_csv_naming{ext-relative}[file naming] schema.
The data themselves are available as
Comma-Separated Value (CSV) files through the LEHD website's Data page
at http://lehd.ces.census.gov/data/ as well as through the
http://ledextract.ces.census.gov/[LED Extraction Tool].

Shapefiles are used to provide mapping functionality in http://qwiexplorer.ces.census.gov/[QWI Explorer] and Job-to-Job Explorer (coming soon).
They are created by transforming input shapefiles sourced from https://www.census.gov/geo/maps-data/data/tiger-line.html[TIGER/Line].
New TIGER/Line shapefiles are typically released by the Census Bureau's Geography Division in August of each year, which are then processed by the LEHD program as new tabulation areas for the QWI[http://lehd.ces.census.gov/data/#qwi] and J2J[http://lehd.ces.census.gov/data/#j2j] data products. The LEHD shapefiles will be made available in the data schema in coordination with the public release of QWI and J2J data products, usually in November or December of each year.

Sources
-------
Files are derived from   https://www.census.gov/geo/maps-data/data/tiger-line.html[TIGER/Line 2015 shapefiles]:

* http://www2.census.gov/geo/tiger/TIGER2015/STATE/[tl_2015_us_state]
* http://www2.census.gov/geo/tiger/TIGER2015/COUNTY/[tl_2015_us_county]
* http://www2.census.gov/geo/tiger/TIGER2015/CBSA/[tl_2015_us_cbsa]
* http://www2.census.gov/geo/tiger/TIGER2015/PLACE/[tl_2015_(ST)_place]  (for creation of WIA/WIB shapefile)
* http://www2.census.gov/geo/tiger/TIGER2015/COUSUB/[tl_2015_(ST)_cousub] (for creation of WIA/WIB shapefile)

Transformations
---------------
The following major transformations are applied to the input files:

* All geographies are reprojected to http://spatialreference.org/ref/epsg/wgs-84/[WGS-1984 Geographic Coordinate System]
* Shoreline water has been clipped out to provide a more recognizable depiction of the coastlines.
* Each layer is given internal point coordinates (stored as double) based on the WGS-1984 projection (decimal degrees).
* Each layer is run through a "simplify polygon" procedure to remove unnecessary complexity from the features.
* Features from Guam, American Samoa, and the Northern Mariana Islands have been removed because they are not used in current LEHD tabulations.
* Each shapefile's attribute table has been updated to conform to the standard LEHD output format, defined in <<format,Format>> section

Outputs
-------
Output shapefiles – grouped by paired products – are listed below. Each shapefile includes specific notes on its preparation.

Basic Naming Schema
-------------------

All files follow the following naming convention:

--------------------------------
[type]]_[geocat].zip
--------------------------------

where [type] = lehd_shp and link:naming_geocat.csv[geocat] contains

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::naming_geocat.csv[]
|===================================================


=== [[format]] FORMAT
( link:variables_shp.csv[variables_shp.csv] )

Files are distributed as http://www.digitalpreservation.gov/formats/fdd/fdd000280.shtml[ESRI Shapefiles], packaged as https://en.wikipedia.org/wiki/Zip_(file_format)[ZIP] files. The SHP component of these archives is described here. Other components (dbf, prj, shx) files are not documented here, we refer users to http://www.digitalpreservation.gov/formats/fdd/fdd000280.shtml .

[width="60%",format="csv",cols="<2,<2,<5,<5",options="header"]
|===================================================
include::variables_shp.csv[]
|===================================================

=== Values
==== STUSPS
( link:label_stusps.csv[] )

FIPS State Postal Code as per https://www.census.gov/geo/reference/codes/cou.html

==== GEOGRAPHY
( link:label_geography.csv[] )
The valid codes correspond to those listed on link:label_geography.csv[].

==== NAME
This is a string that corresponds in general to the 'label' field on link:label_geography.csv[]. Minor deviations for ease of exposition are possible.

=== Common files
==== State
( link:lehd_shp_gs.zip[] )

No transformations occur to this layer other than those listed above.

===  QWI Geographies

==== County
( link:lehd_shp_gc.zip[] )

* STUSPS is appended to the NAME field so that county names are nationally unique. Example: "Cook, IL"

==== CBSA - within State
( link:lehd_shp_gm.zip[] )

* All features are split into state-specific CBSA features by intersecting each feature with the state shapefile features.
* The STUSPS field is added during the intersect with the state shapefile.
* STFIPS (i.e. FIPS State Code as per https://www.census.gov/geo/reference/ansi_statetables.html) is prepended to the CBSA code (https://www.census.gov/population/metro/data/def.html) to create the GEOGRAPHY field to distinguish state-parts of the same CBSA (i.e. make them nationally unique).
* The text "([STUSPS] part)" is appended to the NAME field only for those CBSA features that are split by state lines.

==== Workforce Investment Board Areas
( link:lehd_shp_gw.zip[] )

The WIA/WIB shapefiles are built from the Place, County Subdivision, and County shapefiles from TIGER/Line based on definitions provided by the LED state partners.

=== Job-to-Job Flow Geographies
==== CBSA - National
( link:lehd_shp_gb.zip[] )

* The state remainder areas are added to the shapefile as new features.  They are assigned unique codes ([STUSPS]+999) and names (“Not in metro/micro area, [STUSPS]”).

[[versioning]]
Versioning
----------

Versioning rules follow http://semver.org/spec/v2.0.0.html[Semantic
Versioning V2.0.0], which states that

________________________________________________________________________________
Given a version number MAJOR.MINOR.PATCH, increment the:

* MAJOR version when you make incompatible API changes,
* MINOR version when you add functionality in a backwards-compatible
manner, and
* PATCH version when you make backwards-compatible bug fixes.
________________________________________________________________________________


[[changes]]
Changes
-------


<<<
*******************
This revision: Tue Mar  7 09:00:54 EST 2017
*******************

