formats/V4.4.0/lehd_shapefiles.asciidoc
= LEHD Public Use Shapefile Data
Heath Hayward, Matthew Graham, Lars Vilhuber <Patrick.Hayward@census.gov>
01 April 2019
:ext-relative: {outfilesuffix}
( link:lehd_shapefiles.pdf[Printable version] )



[IMPORTANT]
.Important
==============================================
This specification is draft. Feedback is welcome. 	
Please write us at
link:mailto:Patrick.Hayward@census.gov?subject=LEHD_Shapefiles[Patrick.Hayward@census.gov].
==============================================



Scope
-----

The public-use data from the Longitudinal Employer-Household Dynamics
Program, including the Quarterly Workforce Indicators (QWI) and
Job-to-Job Flows (J2J), are available for download according to
link:lehd_public_use_schema{ext-relative}[structural] and
link:lehd_csv_naming{ext-relative}[file naming] schema.
The data themselves are available as
Comma-Separated Value (CSV) files through the LEHD website's Data page
at https://lehd.ces.census.gov/data/ as well as through the
https://ledextract.ces.census.gov/[LED Extraction Tool].

Shapefiles are used to provide mapping functionality in https://qwiexplorer.ces.census.gov/[QWI Explorer] and https://j2jexplorer.ces.census.gov/[Job-to-Job Explorer (Beta)].
They are created by transforming input shapefiles sourced from https://www.census.gov/geo/maps-data/data/tiger-line.html[TIGER/Line].
New TIGER/Line shapefiles are typically released by the Census Bureau's Geography Division in August of each year, which are then processed by the LEHD program as new tabulation areas for the https://lehd.ces.census.gov/data/#qwi[QWI] and https://lehd.ces.census.gov/data/#j2j[J2J] data products. The LEHD shapefiles will be made available in the data schema in coordination with the public release of QWI and J2J data products, usually in November or December of each year.

Sources
-------
Files are derived from   https://www.census.gov/geo/maps-data/data/tiger-line.html[TIGER/Line 2018 shapefiles]:

* https://www2.census.gov/geo/tiger/TIGER2018/STATE/[tl_2018_us_state]
* https://www2.census.gov/geo/tiger/TIGER2018/COUNTY/[tl_2018_us_county]
* https://www2.census.gov/geo/tiger/TIGER2018/CBSA/[tl_2018_us_cbsa]
* https://www2.census.gov/geo/tiger/TIGER2018/PLACE/[tl_2018_(ST)_place]  (for creation of WIA/WIB shapefile)
* https://www2.census.gov/geo/tiger/TIGER2018/COUSUB/[tl_2018_(ST)_cousub] (for creation of WIA/WIB shapefile)

Transformations
---------------
The following major transformations are applied to the input files:

* All geographies are reprojected to https://spatialreference.org/ref/epsg/wgs-84/[WGS-1984 Geographic Coordinate System]
* Shoreline water has been clipped out to provide a more recognizable depiction of the coastlines.
* Each layer is given internal point coordinates (stored as double) based on the WGS-1984 projection (decimal degrees).
* Each layer is run through a "simplify polygon" procedure to remove unnecessary complexity from the features.
* Features from Guam, American Samoa, and the Northern Mariana Islands have been removed because they are not used in current LEHD tabulations.
* Each shapefile's attribute table has been updated to conform to the standard LEHD output format, defined in <<format,Format>> section

Outputs
-------
Output shapefiles – grouped by paired products – are listed below. Each shapefile includes specific notes on its preparation.

Basic Naming Schema
-------------------

All files follow the following naming convention:

--------------------------------
[type]_[geocat].zip
--------------------------------

where [type] = lehd_shp and link:naming_geocat.csv[geocat] contains

[width="60%",format="csv",cols="^1,<4",options="header"]
|===================================================
include::naming_geocat.csv[]
|===================================================


=== [[format]] FORMAT
( link:variables_shp.csv[variables_shp.csv] )

Files are distributed as https://www.digitalpreservation.gov/formats/fdd/fdd000280.shtml[ESRI Shapefiles], packaged as https://en.wikipedia.org/wiki/Zip_(file_format)[ZIP] files. The SHP component of these archives is described here. Other components (dbf, prj, shx) files are not documented here, we refer users to https://www.digitalpreservation.gov/formats/fdd/fdd000280.shtml .

[width="60%",format="csv",cols="<2,<2,<5,<5",options="header"]
|===================================================
include::variables_shp.csv[]
|===================================================

=== Values
==== STUSPS
( link:label_stusps.csv[] )

FIPS State Postal Code as per https://www.census.gov/geo/reference/codes/cou.html

==== GEOGRAPHY
( link:label_geography.csv[] )

The valid codes correspond to those listed on link:label_geography.csv[].

==== NAME
( link:label_geography.csv[] )

This is a string that corresponds in general to the 'label' field on link:label_geography.csv[]. Minor deviations for ease of exposition are possible.

=== Common files
==== State
( link:lehd_shp_gs.zip[] )

No transformations occur to this layer other than those listed above.

===  QWI Geographies

==== County
( link:lehd_shp_gc.zip[] )

* STUSPS is appended to the NAME field so that county names are nationally unique. Example: "Cook, IL"

==== CBSA - within State
( link:lehd_shp_gm.zip[] )

* All features are split into state-specific CBSA features by intersecting each feature with the state shapefile features.
* The STUSPS field is added during the intersect with the state shapefile.
* STFIPS (i.e. FIPS State Code as per https://www.census.gov/geo/reference/ansi_statetables.html) is prepended to the CBSA code (https://www.census.gov/population/metro/data/def.html) to create the GEOGRAPHY field to distinguish state-parts of the same CBSA (i.e. make them nationally unique).
* The text "([STUSPS] part)" is appended to the NAME field only for those CBSA features that are split by state lines.

==== Workforce Investment Board Areas
( link:lehd_shp_gw.zip[] )

The WIA/WIB shapefiles are built from the Place, County Subdivision, and County shapefiles from TIGER/Line based on definitions provided by the LED state partners.

=== Job-to-Job Flow Geographies
==== Metropolitan (complete)
( link:lehd_shp_gb.zip[] )

* Micropolitan areas are removed and state remainder areas are added as new features. State remainders are assigned unique codes ([STUSPS]+999) and names ("Not in metropolitan area, [STUSPS]").

[[versioning]]
Versioning
----------

Versioning rules follow https://semver.org/spec/v2.0.0.html[Semantic
Versioning V2.0.0], which states that

________________________________________________________________________________
Given a version number MAJOR.MINOR.PATCH, increment the:

* MAJOR version when you make incompatible API changes,
* MINOR version when you add functionality in a backwards-compatible
manner, and
* PATCH version when you make backwards-compatible bug fixes.
________________________________________________________________________________
== [[changes]] Changes
For a description of how schema files are versioned, see link:../VERSIONING{ext-relative}[main directory].

=== This version (revisions)
- 2019-02-21: Initial release
- 2019-03-31: Minor layout changes for better readability

=== Version 4.4.0 from 4.3.1
- Underlying geovintage updated to reflect 2018 census geography
- Updated shapefiles based on TIGER 2018
- PR geography labels added
- Added state part to non-metro/non-micro areas in state label files
- Removed nonexistent VT geography from labels


<<<
*******************
This revision: Mon Apr  1 14:15:10 UTC 2019
*******************

